@@ -1,3 +1,8 @@
+r150 - october, 3, 2009
+    * association : actions > logout > redirect to homepage
+    * association : templates > loginSuccess.php > new welcome message
+
+
 r149 - october, 3, 2009
     * activite : templates > indexSuccess.php > delete link is displayed, 
       warning message is up date
